ajout de l'import des data avec les module import export

--- a/index.html
+++ b/index.html
@@ -131,13 +131,16 @@
 						</div>
 					</div>
 				</section>
-				<section class="card">
+				<!-- <section class="card">
 					<img src="./img/recettes/Recette02.jpg" alt="" />
 				</section>
 				<section class="card">
 					<img src="./img/recettes/Recette03.jpg" alt="" />
-				</section>
+				</section> -->
 			</article>
 		</main>
+		<script src="js/algorithme.js"></script>
+		<script type="module" src="js/init.js"></script>
+		<script type="module" src="data/recipes.js"></script>
 	</body>
 </html>
