ajout des ingrédient dans les recettes

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 			</div>
 			<!-- cards container -->
 
-			<article id="cards-container">
-				<!-- card -->
-			</article>
+			<article id="cards-container"></article>
+
+			<!-- card -->
 		</main>
 
-		<script type="module" src="js/algorithme.js"></script>
+		<script type="module" src="js/search.js"></script>
 		<script type="module" src="js/init.js"></script>
 		<script type="module" src="data/recipes.js"></script>
 		<script src="js/tags.js"></script>
