avancé dans l'algorithme search : comparaison a parait des 3 première lettres de l'input + sanitize fonction

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<header>
 			<img
-				src="./img/Logo.png"
+				src="/img/Logo.png"
 				alt="Les petits plats"
 				id="logo_petits-plats"
 			/>
