adding time on recipe + separate displayRecipient in other file

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 					</div>
 					<input type="search" id="ingredients_search-input" />
 					<ul class="tags-container" id="ingredients-tags">
-						<li>trucs</li>
-						<li>trucs</li>
-						<li>trucs</li>
+						<li>Citron</li>
+						<li>Pommes</li>
+						<li>poulet</li>
 					</ul>
 				</div>
 				<div class="tags-section" id="appareils">
@@ -120,10 +120,8 @@
 			<!-- cards container -->
 
 			<article id="cards-container"></article>
-
-			<!-- card -->
 		</main>
-
+		<script type="module" src="js/display_recipients.js"></script>
 		<script type="module" src="js/search.js"></script>
 		<script type="module" src="js/init.js"></script>
 		<script type="module" src="data/recipes.js"></script>
