creating function getIngredientsList and adding to IngredientsTags <ul>

--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
 						></button>
 					</div>
 					<input type="search" id="ingredients_search-input" />
-					<ul class="tags-container" id="ingredients-tags">
-						<li>Citron</li>
-						<li>Pommes</li>
-						<li>poulet</li>
-					</ul>
+					<ul class="tags-container" id="ingredients-tags"></ul>
 				</div>
 				<div class="tags-section" id="appareils">
 					<div class="title-dropdownbtn-container">
@@ -121,10 +117,11 @@
 
 			<article id="cards-container"></article>
 		</main>
+		<script type="module" src="data/recipes.js"></script>
+		<script type="module" src="js/utils.js"></script>
 		<script type="module" src="js/display_recipients.js"></script>
 		<script type="module" src="js/search.js"></script>
 		<script type="module" src="js/init.js"></script>
-		<script type="module" src="data/recipes.js"></script>
-		<script src="js/tags.js"></script>
+		<script type="module" src="js/tags.js"></script>
 	</body>
 </html>
