starting appliance tags, new function created in utils.js getApplianceList

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="" />
 		<meta name="twitter:creator" content="" />
-
 		<link rel="manifest" href="site.webmanifest" />
 		<link rel="apple-touch-icon" href="icon.png" />
 
@@ -73,6 +72,8 @@
 			<!-- filter tags -->
 
 			<div id="top-bar">
+				<!-- Ingrédients tags -->
+
 				<div class="tags-section" id="ingredients">
 					<div class="title-dropdownbtn-container">
 						<h3 class="tag-title">Ingrédients</h3>
@@ -84,18 +85,22 @@
 					<input type="search" id="ingredients_search-input" />
 					<ul class="tags-container" id="ingredients-tags"></ul>
 				</div>
-				<div class="tags-section" id="appareils">
+				<!-- Appareils tags -->
+
+				<div class="tags-section" id="appliance">
 					<div class="title-dropdownbtn-container">
 						<h3 class="tag-title">Appareils</h3>
-						<button class="dropdownbtn" id="appareils-btn"></button>
+						<button class="dropdownbtn" id="appliance-btn"></button>
 					</div>
-					<input type="search" id="appareils_search-input" />
-					<ul class="tags-container" id="appareils-tags">
+					<input type="search" id="appliance_search-input" />
+					<ul class="tags-container" id="appliance-tags">
 						<li>trucs</li>
 						<li>trucs</li>
 						<li>trucs</li>
 					</ul>
 				</div>
+				<!-- Ustensiles tags -->
+
 				<div class="tags-section" id="ustensiles">
 					<div class="title-dropdownbtn-container">
 						<h3 class="tag-title">Ustensiles</h3>
