finishing appliance & ustensils list, and adding them to DOM + adding cross to delete current search in search tags input

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<!-- filter tags -->
 
 			<div id="top-bar">
-				<!-- Ingrédients tags -->
+				<!-- Ingredients tags -->
 
 				<div class="tags-section" id="ingredients">
 					<div class="title-dropdownbtn-container">
@@ -82,39 +82,38 @@
 							id="ingredients-btn"
 						></button>
 					</div>
-					<input type="search" id="ingredients_search-input" />
+					<form action="" id="ingredients-search-form">
+						<input type="search" id="ingredients_search-input" />
+						<i class="fa-solid fa-xmark"></i>
+					</form>
 					<ul class="tags-container" id="ingredients-tags"></ul>
 				</div>
-				<!-- Appareils tags -->
+				<!-- Appliance tags -->
 
 				<div class="tags-section" id="appliance">
 					<div class="title-dropdownbtn-container">
 						<h3 class="tag-title">Appareils</h3>
 						<button class="dropdownbtn" id="appliance-btn"></button>
 					</div>
-					<input type="search" id="appliance_search-input" />
-					<ul class="tags-container" id="appliance-tags">
-						<li>trucs</li>
-						<li>trucs</li>
-						<li>trucs</li>
-					</ul>
+					<form action="" id="appliance-search-form">
+						<input type="search" id="appliance_search-input" />
+						<i class="fa-solid fa-xmark"></i>
+					</form>
+					<ul class="tags-container" id="appliance-tags"></ul>
 				</div>
 				<!-- Ustensiles tags -->
 
-				<div class="tags-section" id="ustensiles">
+				<div class="tags-section" id="ustensils">
 					<div class="title-dropdownbtn-container">
 						<h3 class="tag-title">Ustensiles</h3>
-						<button
-							class="dropdownbtn"
-							id="ustensiles-btn"
-						></button>
+						<button class="dropdownbtn" id="ustensils-btn"></button>
 					</div>
-					<input type="search" id="ustensiles_search-input" />
-					<ul class="tags-container" id="ustensiles-tags">
-						<li>trucs</li>
-						<li>trucs</li>
-						<li>trucs</li>
-					</ul>
+					<form action="" id="ustensils-search-form">
+						<input type="search" id="ustensils_search-input" />
+						<i class="fa-solid fa-xmark"></i>
+					</form>
+
+					<ul class="tags-container" id="ustensils-tags"></ul>
 				</div>
 				<p id="recettes-number">1500 recettes</p>
 			</div>
