starting feature with number of current recipe displayed

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 					<ul class="tags-container" id="ustensils-tags"></ul>
 				</div>
-				<p id="recettes-number">1500 recettes</p>
+				<p id="recettes-number"></p>
 			</div>
 			<!-- cards container -->
 
