starting feature when a tag is selected it pop a div with the selected tag

--- a/index.html
+++ b/index.html
@@ -168,6 +168,21 @@
 				</div>
 				<p id="recettes-number"></p>
 			</div>
+			<div id="selected-tags-section-container">
+				<ul
+					class="selected-tags-containers"
+					id="selected-ingredient-tags-container"
+				></ul>
+				<ul
+					class="selected-tags-containers"
+					id="selected-appliance-tags-container"
+				></ul>
+				<ul
+					class="selected-tags-containers"
+					id="selected-ustensil-tags-container"
+				></ul>
+			</div>
+
 			<!-- cards container -->
 
 			<article id="cards-container"></article>
